Update sections according to Maria's comment

--- a/contactenos.html
+++ b/contactenos.html
@@ -2,8 +2,11 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Metatags
+	============================================= -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="Plataforma Sur de Procesos Sociales" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -18,9 +21,11 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<!-- Favicon
+	============================================= -->
+	<link rel="shortcut icon" href="images/favicon.ico" />
+	
 	<!-- Document Title
 	============================================= -->
 	<title>Contáctenos | Plataforma Sur de Proceso Sociales</title>
@@ -124,8 +129,7 @@
 
 							<div class="form-widget">
 
-								<div class="form-result"></div>
-
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat eget dolor vel placerat. Duis vel blandit odio, sed congue turpis. Aliquam fringilla augue in magna laoreet, sit amet fringilla felis pulvinar. Aliquam nec ligula vel risus accumsan eleifend. Donec suscipit sem hendrerit elit pretium, quis varius velit posuere.</p>
 								<form class="mb-0" id="template-contactform" name="template-contactform" action="" method="post">
 									<div class="row">
 										<div class="col-md-6 form-group">
