--- a/mapasitio.html
+++ b/mapasitio.html
@@ -2,8 +2,11 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Metatags
+	============================================= -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="Plataforma Sur de Procesos Sociales" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -18,8 +21,10 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<!-- Favicon
+	============================================= -->
+	<link rel="shortcut icon" href="images/favicon.ico" />
 
 	<!-- Document Title
 	============================================= -->
@@ -117,7 +122,98 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					
+					<div class="row">
+						<div class="col-md-4">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Inicio</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Inicio - Plataforma Sur</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Inicio - Materiales de la Escuela de Transición política para la Paz</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Inicio - Destacados</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Inicio - Organizaciones Amigas</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Sobre plataforma Sur</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Sobre plataforma Sur - Misión y Visión</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Sobre plataforma Sur - Ejes Estrátegicos</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Sobre plataforma Sur - Experiencia</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Sobre plataforma Sur - Premio Nacional de Paz</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Sobre plataforma Sur - Información ESAL</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Opinión y Artículos</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit ametL</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Proyectos</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Escuela de Transición Política para la Paz</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Red Agrícola y Ambiental del Huila</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Conservación y Gobernanza de la Serranía de las Minas</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Noticias</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit amet</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Lorem ipsum dolor sit ametL</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Recomendados</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Recomendados - Documentos</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Recomendados - Podcast</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Recomendados - Videos</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+
+						<div class="col-md-4 mb-5">
+							<ul class="iconlist mb-0">
+								<li><i class="icon-file-alt"></i><a href="index.html">Contáctenos</a>
+									<ul>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Contáctenos - Formulario</div></a></li>
+										<li><i class="icon-file-alt"></i><a href="#"><div>Contáctenos - Datos de contacto</div></a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</div>
+				
 				</div>
 
 			</div>
