--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Metatags
+	============================================= -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="Plataforma Sur de Procesos Sociales" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -13,13 +16,15 @@
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-    
+	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
+
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- Favicon
+	============================================= -->
+	<link rel="shortcut icon" href="images/favicon.ico" />
 
 	<!-- Document Title
 	============================================= -->
@@ -301,6 +306,13 @@
 		============================================= -->
 		<footer id="footer" class="dark">
 			<div class="container">
+				<div class="row mt-5 mb-2">
+					<div class="col-12">
+						<div class="widget clearfix float-right">
+
+						</div>
+					</div>		
+				</div>		
                 <div class="row col-mb-50">
                     <div class="col-md-4">
                         <div class="widget clearfix">
