--- a/recomendados.html
+++ b/recomendados.html
@@ -2,8 +2,11 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Metatags
+	============================================= -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="Plataforma Sur de Procesos Sociales" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -18,8 +21,10 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<!-- Favicon
+	============================================= -->
+	<link rel="shortcut icon" href="images/favicon.ico" />
 
 	<!-- Document Title
 	============================================= -->
