Add spacing in Sobre Plataforma

--- a/sobreplataforma.html
+++ b/sobreplataforma.html
@@ -148,13 +148,13 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					<div class="row col-mb-50">
+					<div class="row bottommargin-lg">
 						<div class="col-10 col-md-8 mx-auto">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/SZEflIVnhH8" allowfullscreen></iframe>
 						</div>
 					</div>
 
-					<div id="misionvision" class="row col-mb-50">
+					<div id="misionvision" class="row bottommargin-lg">
 						<div class="col-12 col-md-10 mx-auto">
 							<div class="row">
 								<div class="col-md-6">
@@ -173,7 +173,7 @@
 						</div>
 					</div>
 					
-					<div class="row col-mb-50">
+					<div class="row bottommargin-lg">
 						<div class="col-12 col-md-10 mx-auto">
 
 							<div class="tabs clearfix" id="tab-3">
@@ -380,17 +380,17 @@
 
 
 
-					<div id="experiencia" class="row">
+					<div id="experiencia" class="row bottommargin-lg">
 						<div class="col-12">
 							<div class="fancy-title title-border">
 								<h3>Experiencia</h3>
 							</div> 
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 mb-5">
 							<p>Etiam venenatis felis sodales nunc hendrerit, luctus placerat magna varius. Mauris pharetra ipsum sed pretium placerat. Suspendisse porta cursus vehicula. Pellentesque eget mollis erat, at ultricies risus. Vivamus lobortis non dolor quis molestie. Mauris sagittis, orci eu tempus tempus, purus enim ultrices magna, eu interdum ante urna a quam. Fusce ultricies ex eget orci viverra ullamcorper. Vivamus luctus sodales cursus. Praesent varius sed elit a pharetra. Fusce commodo bibendum ligula ac condimentum. Cras mi quam, gravida et ultrices dictum, luctus id tellus. Fusce ullamcorper sollicitudin mi, sit amet dignissim magna auctor vel. Proin nec blandit sem. Praesent in posuere ligula.</p>
 							<p>Etiam venenatis felis sodales nunc hendrerit, luctus placerat magna varius. Mauris pharetra ipsum sed pretium placerat. Suspendisse porta cursus vehicula.  Mauris pharetra ipsum sed pretium placerat. Suspendisse porta cursus vehicula.  Mauris pharetra ipsum sed pretium placerat. Suspendisse porta cursus vehicula. </p>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 mb-5">
 
 							<div class="accordion accordion-bg">
 
