--- a/noticias.html
+++ b/noticias.html
@@ -48,8 +48,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo-plataforma.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo-plataforma.png" alt="Logo plataforma Sur"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo-plataforma.png" alt="Logo plataforma Sur"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
