--- a/sobreplataforma.html
+++ b/sobreplataforma.html
@@ -48,8 +48,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo-plataforma.png" alt="Canvas Logo"></a>
-							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo-plataforma.png" alt="Logo plataforma Sur"></a>
+							<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo-plataforma.png" alt="Logo plataforma Sur"></a>
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
@@ -186,7 +186,7 @@
 								<div class="tab-container">
 		
 									<div class="tab-content clearfix" id="ejesEstrategicos">
-										<div class="row col-mb-50 mb-0">
+										<div class="row">
 											<div class="col-12">
 												<div class="feature-box fbox-lg">
 													<div class="fbox-icon">
@@ -268,7 +268,7 @@
 										</div>
 									</div>
 									<div class="tab-content clearfix" id="equipoTrabajo">
-										<div class="row col-mb-50 mb-0">
+										<div class="row">
 		
 											<div class="col-lg-6">
 												<div class="team team-list row">
