add margin to Equipo de Trabajo

--- a/sobreplataforma.html
+++ b/sobreplataforma.html
@@ -270,7 +270,7 @@
 									<div class="tab-content clearfix" id="equipoTrabajo">
 										<div class="row">
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/LinaMarcelaGonzalez.jpg" alt="Lina Marcela González Pérez">
@@ -284,7 +284,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/KarlaRamos.jpg" alt="Karla Leandra Ramos">
@@ -298,7 +298,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/JoseJairoGonzalez.jpg" alt="José Jairo González Arias">
@@ -312,7 +312,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/EdilbertoLozada.jpg" alt="Edilberto Lozada Pérez">
@@ -326,7 +326,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/BelenAlarcon.jpg" alt="Belén Alarcón Alarcón">
@@ -340,7 +340,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/AdrianaVargas.jpg" alt="Adriana Vargas Salazar">
@@ -354,7 +354,7 @@
 												</div>
 											</div>
 		
-											<div class="col-lg-6">
+											<div class="col-lg-6 mb-5">
 												<div class="team team-list row">
 													<div class="team-image col-sm-5">
 														<img src="images/equipo/TatianaCarvajal.jpg" alt="Tatiana Carvajal Polania">
